--- a/package.json
+++ b/package.json
@@ -1,28 +1,25 @@
 {
   "name": "newblog",
   "version": "1.0.0",
-  "description": "",
+  "description": "Ryan's blog",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "vitepress dev .",
+    "dev": "vitepress dev . --host",
     "build": "vitepress build .",
     "preview": "vitepress preview ."
   },
   "keywords": [],
-  "author": "",
+  "author": "ryancui <cuizhaowei92@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "@shikijs/vitepress-twoslash": "^1.1.7",
-    "@types/fs-extra": "^11.0.4",
-    "dayjs": "^1.11.10",
-    "fs-extra": "^11.2.0",
-    "globby": "^14.0.1",
+    "@shikijs/vitepress-twoslash": "^2.0.3",
+    "dayjs": "^1.11.13",
+    "globby": "^14.0.2",
     "gray-matter": "^4.0.3",
     "medium-zoom": "^1.1.0",
-    "vitepress": "1.0.0-rc.45",
-    "vue": "^3.4.21",
-    "vue-cusdis": "^2.1.1"
+    "unocss": "^65.4.2",
+    "vitepress": "1.6.1",
+    "vue": "^3.5.13"
   }
 }
