--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "dayjs": "^1.11.13",
     "globby": "^14.0.2",
     "gray-matter": "^4.0.3",
+    "markdown-it-implicit-figures": "^0.12.0",
     "medium-zoom": "^1.1.0",
     "unocss": "^65.4.2",
+    "vite-svg-loader": "^5.1.0",
     "vitepress": "1.6.1",
     "vue": "^3.5.13"
   }
